# Babel

./: CMakeLists.txt  README.txt  build.sh  conanfile.txt  make.sh
client/: CMakeLists.txt  Makefile  NetworkClient.cpp  NetworkClient.hpp  conanfile.txt  main.cpp  myudp.cpp  myudp.hpp
doc/: Doxyfile
include/Client/Audio/: Audio.hpp  Stream.hpp  StreamParam.hpp
include/Client/Babel/: Babel.hpp  CallButton.hpp  WindowConnection.hpp  WindowDaugio.hpp  WindowProgram.hpp
include/Client/Compressor/: Compressor.hpp  Decoder.hpp  Encoder.hpp
include/Client/Qt/: AbstractWindow.hpp  IWindow.hpp  QtBabel.hpp  TextField.hpp
network/: client  clientLOcal
network/buil/: Makefile  server
network/include/: client.hpp  room.hpp  server.hpp  tools.hpp
network/src/: client  clientIostream.cpp  clientS.cpp  room.cpp  server.cpp  word_array.cpp
src/Client/: main.cpp
src/Client/Audio/: Audio.cpp  Stream.cpp  StreamParam.cpp
src/Client/Babel/: Babel.cpp  CallButton.cpp  WindowConnection.cpp  WindowDaugio.cpp  WindowProgram.cpp
src/Client/Compressor/: Compressor.cpp  Decoder.cpp  Encoder.cpp
src/Client/Qt/: AbstractWindow.cpp  QtBabel.cpp  TextField.cpp
